Add "open in browser" link
darcs-hash:20070223103639-90518-528fc5470c01cb6c74fbd79167627fabcc76242e.gz

--- a/gui.glade
+++ b/gui.glade
@@ -2,6 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
 <!--*- mode: xml -*-->
 <glade-interface>
+  <requires lib="gnome"/>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
     <property name="title">Pyro</property>
@@ -44,6 +45,15 @@
               </widget>
               <packing>
                 <property name="position">2</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GnomeHRef" id="hrfBrowser">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Open in browser</property>
+              </widget>
+              <packing>
+                <property name="position">3</property>
               </packing>
             </child>
           </widget>
